app/assets/stylesheets/module/_additional-info.css.scss
.additional-info {
  display: inline-block;
  margin-left: $baseLineHeight/2;
  margin-bottom: $baseLineHeight/2;
  padding: 7px 0;
  vertical-align: middle;

  .js & {
    display: none;
  }

  &.help {
    color: darken(white, 40%);
  }

  .success & {
    margin-bottom: 0;
    color: $successText;
    &:before {
      content: "\e038"; // checkmark-circle-full
    }

    .js & {
      display: inline-block;
    }
  }
}

